Added Login And Signup Routes

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -29,6 +29,7 @@
                     <p> Teacher</p>
                 </div>
                 <button type="submit" class="submit-btn"> Sign Up </button>
+                <p> Have an account? <a href="login"> Log in! </a></p>
             </form>
         </div>
     </body>
