Added School Route

--- a/views/studentHome.ejs
+++ b/views/studentHome.ejs
@@ -1,1 +1,15 @@
-Student Home
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Student Home </title>
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <li> <a href='schools'> Schools </a></li>
+                <li>Teachers</li>
+                <li>Study Material</li>
+            </ul>
+        </nav>
+    </body>
+</html>
