--- a/views/teacherHome.ejs
+++ b/views/teacherHome.ejs
@@ -1,1 +1,14 @@
-Teacher Home
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Teacher Home </title>
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <li>Offer Tuitions</li>
+                <li>Upload Study Material</li>
+            </ul>
+        </nav>
+    </body>
+</html>
