Added Filter Teachers Form and Result

--- a/views/studentHome.ejs
+++ b/views/studentHome.ejs
@@ -7,8 +7,8 @@
         <nav>
             <ul>
                 <li> <a href='schools'> Schools </a></li>
-                <li>Teachers</li>
-                <li>Study Material</li>
+                <li> <a href='studTeachers'> Teachers </a></li>
+                <li> <a href='studMaterial'> Study Material </a></li>
             </ul>
         </nav>
     </body>
