--- a/views/teacherHome.ejs
+++ b/views/teacherHome.ejs
@@ -6,8 +6,8 @@
     <body>
         <nav>
             <ul>
-                <li>Offer Tuitions</li>
-                <li>Upload Study Material</li>
+                <li> <a href="/teachTuitions"> Offer Tuitions </a></li>
+                <li> <a href="/teachMaterial"> Upload Study Material </a></li>
             </ul>
         </nav>
     </body>
