--- a/views/svfilterMaterial.ejs
+++ b/views/svfilterMaterial.ejs
@@ -1,1 +1,37 @@
-Student Form to Filter Material
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>View Material</title>
+</head>
+
+<body>
+    <h1>View Study Material</h1>
+    <form action="/studMaterial" method="POST">
+        <label for="grade">Grade:</label>
+        <select name="grade" id="grade">
+            <option value="">All</option>
+            <option value="9"> 9 </option>
+            <option value="10"> 10 </option>
+            <option value="11"> 11 </option>
+            <option value="12"> 12 </option>
+        </select>
+        <br>
+        <br>
+        <label for="subject"> Subject: </label>
+        <select name="subject" id="subject">
+            <option value=""> All </option>
+            <option value="Physics"> Physics </option>
+            <option value="Chemistry"> Chemistry </option>
+            <option value="Math"> Math </option>
+            <option value="Biology"> Biology </option>
+            <option value="English"> English </option>
+        </select>
+        <br>
+        <br>
+        <button type="submit"> Find </button>
+    </form>
+</body>
+
+</html>
