--- a/views/studentHome.ejs
+++ b/views/studentHome.ejs
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title> Student Home </title>
+        <link rel="stylesheet" href="studentstyle.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+        </style>
     </head>
     <body>
         <nav>
@@ -11,5 +15,11 @@
                 <li> <a href='studMaterial'> Study Material </a></li>
             </ul>
         </nav>
+
+        <div class="animation-container">
+            <span class="text1"> welcome, student! </span>
+            <span class="text1"> find schools, tutors and study material here. </span>
+        </div>
+
     </body>
 </html>
