--- a/views/filterSchools.ejs
+++ b/views/filterSchools.ejs
@@ -1,39 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Select Schools</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Select Schools</title>
+  <link rel="stylesheet" href="studentstyle.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+  </style>
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li> <a href='schools'> Schools </a></li>
+      <li> <a href='studTeachers'> Teachers </a></li>
+      <li> <a href='studMaterial'> Study Material </a></li>
+    </ul>
+  </nav>
+  <main>
     <h1>Filter Schools</h1>
-    <form action="/schools" method="POST">
-      <label for="city">City:</label>
-      <select name="city" id="city">
-        <option value="">All Cities</option>
-        <option value="Kolkata"> Kolkata </option>
-        <option value="Bangalore"> Bangalore </option>
-        <option value="Mumbai"> Mumbai </option>
-    </select>
-    <br>
-    <br>
-      <label for="type"> Type: </label>
-      <select name="type" id="type">
-        <option value=""> All </option>
-        <option value="Co-ed"> Co-ed </option>
-        <option value="Girls"> Girls </option>
-        <option value="Boys"> Boys </option>
-      </select>
-    <br>
-    <br>
-      <label for="board"> Board: </label>
-      <select name="board" id="board">
-        <option value=""> All </option>
-        <option value="CBSE"> CBSE </option>
-        <option value="ICSE"> ICSE </option>
-      </select>
-    <br>
-    <br>
-      <button type="submit"> Find </button>
-    </form>
-  </body>
+    <div class="form-container">
+      <form action="/schools" method="POST">
+        <label for="city">City:</label>
+        <select class="form-select" name="city" id="city">
+          <option value="">All Cities</option>
+          <option value="Kolkata"> Kolkata </option>
+          <option value="Bangalore"> Bangalore </option>
+          <option value="Mumbai"> Mumbai </option>
+        </select>
+        <br>
+        <br>
+        <label for="type"> Type: </label>
+        <select name="type" class="form-select" id="type">
+          <option value=""> All </option>
+          <option value="Co-ed"> Co-ed </option>
+          <option value="Girls"> Girls </option>
+          <option value="Boys"> Boys </option>
+        </select>
+        <br>
+        <br>
+        <label for="board"> Board: </label>
+        <select name="board" class="form-select" id="board">
+          <option value=""> All </option>
+          <option value="CBSE"> CBSE </option>
+          <option value="ICSE"> ICSE </option>
+        </select>
+        <br>
+        <br>
+        <button type="submit" class="submit-btn"> Find </button>
+      </form>
+    </div>
+    
+  </main>
+ 
+  <footer>
+    <p> contact: +91 87879 12345 | xa.ahana.xa@gmail.com </p>
+</footer>
+</body>
+
 </html>
