--- a/views/svfilterTeachers.ejs
+++ b/views/svfilterTeachers.ejs
@@ -4,34 +4,54 @@
 <head>
   <meta charset="UTF-8">
   <title>View Teachers</title>
+  <link rel="stylesheet" href="studentstyle.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+  </style>
 </head>
 
 <body>
-  <h1>View Teachers</h1>
-  <form action="/studTeachers" method="POST">
-    <label for="grade">Grade:</label>
-    <select name="grade" id="grade">
-      <option value="">All</option>
-      <option value="9"> 9 </option>
-      <option value="10"> 10 </option>
-      <option value="11"> 11 </option>
-      <option value="12"> 12 </option>
-    </select>
-    <br>
-    <br>
-    <label for="subject"> Subject: </label>
-    <select name="subject" id="subject">
-      <option value=""> All </option>
-      <option value="Physics"> Physics </option>
-      <option value="Chemistry"> Chemistry </option>
-      <option value="Math"> Math </option>
-      <option value="Biology"> Biology </option>
-      <option value="English"> English </option>
-    </select>
-    <br>
-    <br>
-    <button type="submit"> Find </button>
-  </form>
+  <nav>
+    <ul>
+      <li> <a href='schools'> Schools </a></li>
+      <li> <a href='studTeachers'> Teachers </a></li>
+      <li> <a href='studMaterial'> Study Material </a></li>
+    </ul>
+  </nav>
+  <main>
+    <h1>View Teachers</h1>
+    <div class="form-container">
+      <form action="/studTeachers" method="POST">
+        <label for="grade">Grade:</label>
+        <select name="grade" class="form-select" id="grade">
+          <option value="">All</option>
+          <option value="9"> 9 </option>
+          <option value="10"> 10 </option>
+          <option value="11"> 11 </option>
+          <option value="12"> 12 </option>
+        </select>
+        <br>
+        <br>
+        <label for="subject"> Subject: </label>
+        <select name="subject" class="form-select" id="subject">
+          <option value=""> All </option>
+          <option value="Physics"> Physics </option>
+          <option value="Chemistry"> Chemistry </option>
+          <option value="Math"> Math </option>
+          <option value="Biology"> Biology </option>
+          <option value="English"> English </option>
+        </select>
+        <br>
+        <br>
+        <button type="submit" class="submit-btn"> Find </button>
+      </form>
+    </div>
+    
+  </main>
+  <footer>
+    <p> contact: +91 87879 12345 | xa.ahana.xa@gmail.com </p>
+</footer>
+
 </body>
 
 </html>
