--- a/views/svmaterialResult.ejs
+++ b/views/svmaterialResult.ejs
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Study Material</title>
+  <link rel="stylesheet" href="studentstyle.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+  </style>
 </head>
+
 <body>
-  <h1>List of Material</h1>
-  <% if (!filteredResults[0]) { %>
-   <p> No Material Found</p>
-  <% } else { %>
-    <table>
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Author</th>
-          <th>Subject</th>
-          <th>Grade</th>
-          <th>Link</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% for (const material of filteredResults) { %>
-          <tr>
-            <td><%= material.title %></td>
-            <td><%= material.author %></td>
-            <td><%= material.subject %></td>
-            <td><%= material.grade %></td>
-            <td> <a href=<%= material.link %> target="_blank"> Link </a></td>
-          </tr>
+  <nav>
+    <ul>
+      <li> <a href='schools'> Schools </a></li>
+      <li> <a href='studTeachers'> Teachers </a></li>
+      <li> <a href='studMaterial'> Study Material </a></li>
+    </ul>
+  </nav>
+  <main>
+    <h1>List of Material</h1>
+    <% if (!filteredResults[0]) { %>
+      <p> No Material Found</p>
+      <% } else { %>
+            <% for (const material of filteredResults) { %>
+              <div class="result-container">
+                <div class="result">
+                  <p>
+                    <%= material.title %> <br>
+                    <%= material.author %> <br>
+                    <%= material.subject %> <br>
+                    <%= material.grade %> <br>
+                    <a href=<%=material.link %> target="_blank"> Link </a> <br>
+                  </p>
+                </div>
+              </div>
+              <% } %>
         <% } %>
-      </tbody>
-    </table>
-  <% } %>
+  </main>
+  <footer>
+    <p> contact: +91 87879 12345 | xa.ahana.xa@gmail.com </p>
+</footer>
+
 </body>
+
 </html>
