--- a/views/svteachersResult.ejs
+++ b/views/svteachersResult.ejs
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Teacher Data</title>
+  <link rel="stylesheet" href="studentstyle.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+  </style>
 </head>
+
 <body>
-  <h1>List of Teachers</h1>
-  <% if (!filteredResults[0]) { %>
-   <p> No Teachers Found</p>
-  <% } else { %>
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Grade</th>
-          <th>Subject</th>
-          <th>YOE</th>
-          <th>Monthly Fees</th>
-          <th>Mode</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% for (const teacher of filteredResults) { %>
-          <tr>
-            <td><%= teacher.name %></td>
-            <td><%= teacher.grade %></td>
-            <td><%= teacher.subject %></td>
-            <td><%= teacher.yoe %></td>
-            <td><%= teacher.fees %></td>
-            <td><%= teacher.mode %></td>
-          </tr>
+  <nav>
+    <ul>
+      <li> <a href='schools'> Schools </a></li>
+      <li> <a href='studTeachers'> Teachers </a></li>
+      <li> <a href='studMaterial'> Study Material </a></li>
+    </ul>
+  </nav>
+  <main>
+    <h1>List of Teachers</h1>
+    <% if (!filteredResults[0]) { %>
+      <p> No Teachers Found</p>
+      <% } else { %>
+            <% for (const teacher of filteredResults) { %>
+              <div class="result-container">
+                <div class="result">
+                  <p>
+                    <%= teacher.name %> <br>
+                    <%= teacher.grade %> <br>
+                    <%= teacher.subject %> <br>
+                    <%= teacher.yoe %> <br>
+                    <%= teacher.fees %> <br>
+                    <%= teacher.mode %> <br>
+                  </p>
+                </div>
+              </div>
+              <% } %>
         <% } %>
-      </tbody>
-    </table>
-  <% } %>
+  </main>
+  <footer>
+    <p> contact: +91 87879 12345 | xa.ahana.xa@gmail.com </p>
+</footer>
+
 </body>
+
 </html>
