--- a/views/teacherHome.ejs
+++ b/views/teacherHome.ejs
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title> Teacher Home </title>
+        <link rel="stylesheet" href="teacherstyle.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+        </style>
     </head>
     <body>
         <nav>
@@ -10,5 +14,10 @@
                 <li> <a href="/teachMaterial"> Upload Study Material </a></li>
             </ul>
         </nav>
+        
+        <div class="animation-container">
+            <span class="text1"> welcome, teacher! </span>
+            <span class="text1"> offer tuitions and add study material here. </span>
+        </div>
     </body>
 </html>
