--- a/views/tvMaterial.ejs
+++ b/views/tvMaterial.ejs
@@ -3,46 +3,64 @@
 
 <head>
     <title> Add Material </title>
+    <link rel="stylesheet" href="teacherstyle.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+    </style>
 </head>
 
 <body>
-    <% if (locals.message) { %>
-        <p>
-            <%= locals.message %>
-        </p>
-        <% } else { %>
-            <h2> Add Study Material </h2>
-            <form action="teachMaterial" method="POST">
-                <label for="title"> Book Title: </label>
-                <input type="text" id="title" name="title" placeholder="Enter title of book" required>
-                <br><br>
-                <label for="author"> Author: </label>
-                <input type="text" id="author" name="author" placeholder="Enter author of book" required>
-                <br><br>
-                <label for="subject"> Subject: </label>
-                <select name="subject" id="subject">
-                    <option value="Physics"> Physics </option>
-                    <option value="Chemistry"> Chemistry </option>
-                    <option value="Math"> Math </option>
-                    <option value="Biology"> Biology </option>
-                    <option value="English"> English </option>
-                </select>
-                <br><br>
-                <label for="grade"> Grade: </label>
-                <select name="grade" id="grade">
-                    <option value="9"> 9 </option>
-                    <option value="10"> 10 </option>
-                    <option value="11"> 11 </option>
-                    <option value="12"> 12 </option>
-                </select>
-                <br><br>
-                <label for="link"> Link: </label>
-                <input type="text" id="link" name="link" placeholder="Link to buy textbook" required>
-                <br><br>
-                <button type="submit"> Submit </button>
-            </form>
-            <% } %>
+    <nav>
+        <ul>
+            <li> <a href="/teachTuitions"> Offer Tuitions </a></li>
+            <li> <a href="/teachMaterial"> Upload Study Material </a></li>
+        </ul>
+    </nav>
+    <main>
+        <% if (locals.message) { %>
+            <p>
+                <%= locals.message %>
+            </p>
+            <% } else { %>
+                <h1> Add Study Material </h1>
+                <div class="form-container">
+                    <form action="teachMaterial" method="POST">
+                        <label for="title"> Book Title: </label>
+                        <input type="text" id="title" name="title" placeholder="Enter title of book" required>
+                        <br><br>
+                        <label for="author"> Author: </label>
+                        <input type="text" id="author" name="author" placeholder="Enter author of book" required>
+                        <br><br>
+                        <label for="subject"> Subject: </label>
+                        <select name="subject" id="subject">
+                            <option value="Physics"> Physics </option>
+                            <option value="Chemistry"> Chemistry </option>
+                            <option value="Math"> Math </option>
+                            <option value="Biology"> Biology </option>
+                            <option value="English"> English </option>
+                        </select>
+                        <br><br>
+                        <label for="grade"> Grade: </label>
+                        <select name="grade" id="grade">
+                            <option value="9"> 9 </option>
+                            <option value="10"> 10 </option>
+                            <option value="11"> 11 </option>
+                            <option value="12"> 12 </option>
+                        </select>
+                        <br><br>
+                        <label for="link"> Link: </label>
+                        <input type="text" id="link" name="link" placeholder="Link to buy textbook" required>
+                        <br><br>
+                        <button type="submit" class="submit-btn"> Submit </button>
+                    </form>
+                </div>
 
+                <% } %>
+    </main>
+
+    <footer>
+        <p> contact: +91 87879 12345 | xa.ahana.xa@gmail.com </p>
+    </footer>
 </body>
 
 </html>
