--- a/public/formstyle.css
+++ b/public/formstyle.css
@@ -1,4 +1,4 @@
-body{
+/*body{
     height: 100vh;
     display: flex;
     align-items: center;
@@ -34,4 +34,71 @@ h2{
     font-size: 16px;
     border: 1px solid cornflowerblue;
     border-radius: 3px;
+}*/
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.form-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+form{
+    box-sizing: border-box;
+    border: 4px solid black;
+    width: 400px;
+    height: 450px;
+    border-radius: 8%;
+    padding: 50px 0 0 80px;
+}
+
+form label{
+    font-size: 25px;
+    font-weight: 450px;
+    text-transform: lowercase;
+}
+
+form a{
+    color: black;
+}
+
+.submit-btn{
+    width: 70px;
+    height: 25px;
+    font-size: 15px;
+    padding: 2px 5px 5px 5px;
+    border: 1px solid black;
+    border-radius: 10%;
+    text-transform: lowercase;
+    font-weight: 450px;
+    margin-right: 30px;
+}
+
+.submit-btn:hover{
+    background-color: black;
+    color: white;
+    cursor: pointer;
+}
+
+.form-select{
+    border: 1px solid black;
+    border-radius: 10%;
+    margin-left: 10px;
+    text-transform: lowercase;
+}
+
+h1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 0 30px 0;
+    text-transform: lowercase;
+    font-weight: 500;
+
 }
