--- a/views/svteachersResult.ejs
+++ b/views/svteachersResult.ejs
@@ -28,10 +28,10 @@
                 <div class="result">
                   <p>
                     <%= teacher.name %> <br>
-                    <%= teacher.grade %> <br>
+                    grade <%= teacher.grade %> <br>
                     <%= teacher.subject %> <br>
-                    <%= teacher.yoe %> <br>
-                    <%= teacher.fees %> <br>
+                    <%= teacher.yoe %> years experience<br>
+                    rs <%= teacher.fees %>/month<br>
                     <%= teacher.mode %> <br>
                   </p>
                 </div>
